Revised Message and Image

--- a/locale/de.json
+++ b/locale/de.json
@@ -14,7 +14,7 @@
   },
   "banner": {
     "founder": "Gründer von",
-    "hello": "Sag Hallo"
+    "hello": "Besprechen Sie es noch heute mit Vision Goal"
   },
   "about-us": {
     "title": "Über mich",
