--- a/locale/en.json
+++ b/locale/en.json
@@ -14,7 +14,7 @@
   },
   "banner": {
     "founder": "Founder of",
-    "hello": "Say Hello"
+    "hello": "Discuss With Vision Goal Today"
   },
   "about-us": {
     "title": "About Andreas",
